# Webserv

./: .clang-format  .gitignore  Makefile  README.md  compile_commands.json  db.txt  default.config  dummyfile  log.txt  test.txt  todo-manu.md  webServ
include/: AClientFdReader.hpp  Client.hpp  ConfigParser.hpp  ConfigValue.hpp  HttpErrorHandler.hpp  HttpException.hpp  HttpMethodHandler.hpp  HttpRequest.hpp  HttpResponse.hpp  Logger.hpp  RequestParser.hpp  Server.hpp  ServerConfig.hpp  ServerEngine.hpp  ServerException.hpp  ServerInput.hpp  WebServ.hpp  colors.hpp  macros.hpp  signals.hpp  utils.hpp
rust-cgi/: Cargo.toml
rust-cgis/: Cargo.toml
rust-cgis/src/: cookie_check.rs  delete.rs  login.rs
rust-cookies/: Cargo.toml
srcs/: Client.cpp  ConfigParser.cpp  ConfigValue.cpp  HttpErrorHandler.cpp  HttpException.cpp  HttpMethodHandler.cpp  HttpRequest.cpp  HttpResponse.cpp  Logger.cpp  RequestParser.cpp  Server.cpp  ServerConfig.cpp  ServerEngine.cpp  ServerException.cpp  ServerInput.cpp  WebServ.cpp  main.cpp  signals.cpp  utils.cpp
tests/: ARequestParserTest.cpp  HttpRequest  HttpRequestTest.cpp  Logger  LoggerTest.cpp  Makefile  RequestParser  RequestParserTest.cpp  ServerConfig  ServerConfigTest.cpp  ServerEngineDelete  ServerEngineDeleteTest.cpp  ServerEngineGet  ServerEngineGetTest.cpp  ServerEnginePostTest.cpp  ServerEngineTest.cpp  ServerException  ServerExceptionTest.cpp  ServerInput  ServerInputTest.cpp  chunkedRequest.md  deleteRequest.txt  getRequest.txt  postRequest.txt  test.config  test.hpp  test_default.config  traceRequest.txt  utils  (+1 more)
(+65 files in other folders)
