[package]
name = "rust-cookies"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14"
cookie = "0.18"
log = "0.4"
log4rs = "1.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.9"
serde_json = "1.0"

[[bin]]
name = "cookie_check_cgi"
path = "src/cookie_check.rs"

[[bin]]
name = "login_cgi"
path = "src/login.rs"

[[bin]]
name = "delete_cgi"
path = "src/delete.rs"
